--- a/EndPoint.Site/Areas/Admin/Views/Users/Index.cshtml
+++ b/EndPoint.Site/Areas/Admin/Views/Users/Index.cshtml
@@ -48,16 +48,15 @@
                                                         <td class="sorting_1">@item.FullName</td>
                                                         <td>@item.Email</td>
                                                         <td>
-                                                            <button class="btn btn-info" onclick="ShowModalEdituser('@item.Id' , '@item.FullName')">ویرایش</button>
+                                                            <button class="btn btn-info" onclick="ShowModalEdituser('@item.Id' , '@item.FullName','@item.Email')">ویرایش</button>
                                                             <button class="btn btn-danger" onclick="DeleteUser('@item.Id')">حذف</button>
                                                             @if (item.IsActive)
                                                             {
-                                                                <button class="btn btn-warning" onclick="UserSatusChange('@item.Id')">غیر فعال</button>
-
+                                                                <button class="btn btn-warning" onclick="UserSatusChange('@item.Id')"> غیر فعال </button>
                                                             }
                                                             else
                                                             {
-                                                                <button class="btn btn-info" onclick="UserSatusChange('@item.Id')">فعال کردن کاربر  </button>
+                                                                <button class="btn btn-info" onclick="UserSatusChange('@item.Id')"> فعال </button>
                                                             }
                                                         </td>
                                                     </tr>
@@ -197,10 +196,12 @@
 
             var userId = $("#Edit_UserId").val();
             var fullName = $("#Edit_Fullname").val();
+            var email = $("#Edit_Email").val();
 
             var postData = {
                 'UserId': userId,
                 'FullName': fullName,
+                'Email' : email,
             };
 
 
@@ -238,9 +239,10 @@
         }
 
 
-        function ShowModalEdituser(UserId, fullName) {
+        function ShowModalEdituser(UserId, fullName, email) {
             $('#Edit_Fullname').val(fullName)
             $('#Edit_UserId').val(UserId)
+            $('#Edit_Email').val(email)
 
             $('#EditUser').modal('show');
 
@@ -274,6 +276,8 @@
                             <input type="hidden" id="Edit_UserId" />
                             <label for="basicInput">نام و نام خانوادگی</label>
                             <input type="text" class="form-control" id="Edit_Fullname">
+                            <label for="basicInput">ایمیل</label>
+                            <input type="text" class="form-control" id="Edit_Email">
                         </fieldset>
                     </div>
                 </div>
